--- a/.env
+++ b/.env
@@ -24,5 +24,5 @@ APP_SECRET=bf8c3b57122f5e80d648b1469666aeea
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://xlaguens:xaclag@92.222.38.97:3306/xlaguens_blog
+DATABASE_URL=mysql://blog:linuxlinux@127.0.0.1:3306/blog
 ###< doctrine/doctrine-bundle ###
